--- a/Philo/.vscode/settings.json
+++ b/Philo/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
         "philo.h": "c"
+    },
+    "[c]": {
+        "editor.defaultFormatter": "keyhr.42-c-format"
     }
 }
